automation/logs/web-trend-research-orchestrator.log
[2025-08-08T17:14:42.279Z] 🚀 Web Trend Research orchestrator started
[2025-08-08T17:14:42.281Z] ▶ node /workspace/automation/web-trend-research-analyzer.cjs
Trend research analyzer: 106 topics saved to /workspace/data/reports/trends/trends.json
[2025-08-08T17:14:43.575Z] ▶ node /workspace/automation/web-trend-research-factory.cjs
/workspace/automation/web-trend-research-factory.cjs:38
    const title = (t.title || '').replace(/`/g, '\\`');
                                                ^^^^^

SyntaxError: Unexpected string
    at wrapSafe (node:internal/modules/cjs/loader:1662:18)
    at Module._compile (node:internal/modules/cjs/loader:1704:20)
    at Object..js (node:internal/modules/cjs/loader:1895:10)
    at Module.load (node:internal/modules/cjs/loader:1465:32)
    at Function._load (node:internal/modules/cjs/loader:1282:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_module:36:49

Node.js v22.16.0
[2025-08-08T17:14:43.596Z] ⚠️ Exit 1
[2025-08-08T17:15:19.220Z] 🚀 Web Trend Research orchestrator started
[2025-08-08T17:15:19.222Z] ▶ node /workspace/automation/web-trend-research-analyzer.cjs
Trend research analyzer: 106 topics saved to /workspace/data/reports/trends/trends.json
[2025-08-08T17:15:20.700Z] ▶ node /workspace/automation/web-trend-research-factory.cjs
Web trend research factory: ensured apply agent exists.
[2025-08-08T17:15:20.723Z] ▶ node /workspace/automation/web-trend-agents/apply-trending-marketing-block.cjs
/workspace/automation/web-trend-agents/apply-trending-marketing-block.cjs:17
  const block = "
                ^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1662:18)
    at Module._compile (node:internal/modules/cjs/loader:1704:20)
    at Object..js (node:internal/modules/cjs/loader:1895:10)
    at Module.load (node:internal/modules/cjs/loader:1465:32)
    at Function._load (node:internal/modules/cjs/loader:1282:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_module:36:49

Node.js v22.16.0
[2025-08-08T17:15:20.742Z] ⚠️ Exit 1
[2025-08-08T17:19:07.589Z] 🚀 Web Trend Research orchestrator started
[2025-08-08T17:19:07.591Z] ▶ node /workspace/automation/web-trend-research-analyzer.cjs
Trend research analyzer: 106 topics saved to /workspace/data/reports/trends/trends.json
[2025-08-08T17:19:08.796Z] ▶ node /workspace/automation/web-trend-research-factory.cjs
Web trend research factory: ensured apply agent exists.
[2025-08-08T17:19:08.817Z] ▶ node /workspace/automation/web-trend-research-applier.cjs
Applied marketing trends block to homepage.
